--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .img-shadow {
+    filter: drop-shadow(40px 50px 25px #0f1115);
+  }
+  .img-shadow2 {
+    filter: drop-shadow(10px 30px 15px #3030307a);
+  }
+  .input-style {
+    @apply rounded-md border-[1px] border-gray-400 px-4 py-2;
+  }
+  .primary-btn {
+    @apply bg-primary hover:bg-primaryDark rounded-md px-4 py-2 text-white duration-200;
+  }
+  .img-tumbler {
+    @apply h-[400px] w-auto md:h-[700px] md:w-full;
   }
 }
